<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/display"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text=""
            android:textSize="28sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_back"/>

            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_clear"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_up"/>

            <Button
                android:id="@+id/button_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_down"/>
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4">

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_1"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_2"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_3"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_plus"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4">

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_4"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_5"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_6"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_minus"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4">

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_7"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_8"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_9"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_mult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_mult"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4">

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_left_paren"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_left_paren"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_0"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_right_paren"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_right_paren"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_div"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4">

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_period"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_period"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_comma"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_comma"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_caret"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_caret"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_e"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_e"
                android:textAllCaps="false"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4">

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_sqr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_sqr"
                android:textAllCaps="false"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_sqrt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_sqrt"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_exp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_exp"
                android:textAllCaps="false"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_pi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_pi"
                android:textAllCaps="false"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4">

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_c"
                android:textAllCaps="false"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_gamma"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_gamma"
                android:textAllCaps="false"/>

            <piedmontlaunch.org.highprecisioncalculator.CalcButton
                android:id="@+id/button_ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_ans"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/button_equals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:text="@string/button_equals"/>

        </TableRow>
    </TableLayout>

</LinearLayout>